--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="anim"></h1>
+    <br>
+    <br><br>
+    <img src="./assests/dino-stationary.png" alt="" class ="image">
 </body>
 </html>
