canvas added in main html

--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
     <script src="index.js" type="module"></script>
 </head>
 <body>
-    
+    <!-- <img src="dino-stationary.png" alt="" id ="hii"> -->
+    <div class ="center">
+      <canvas id = "game"></canvas>
+  </div>
 </body>
 </html>
