Added new Assets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class ="body">
 
         <h1 class="anim"></h1>
-        <img src="./assests/dino-stationary.png" alt="" class ="image"><br>
+        <img src="./assets/dino-stationary.png" alt="" class ="image"><br>
     </div>
           
     <div class="contain1">
