--- a/main.html
+++ b/main.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="index.js" type="module"></script>
 </head>
 <body>
     <!-- <img src="dino-stationary.png" alt="" id ="hii"> -->
+    <audio id="crashSound" src="assets/crash.mpeg"></audio>
+    <audio id="jumpSound" src="assets/jump.mpeg"></audio>
+
     <div class ="center">
       <canvas id = "game"></canvas>
   </div>
