--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="contain1">
         <a href="/main.html"  class ="nan">
             <button class="btn">Press to start</button></a>
+            <a href="/HorseRide.html"  class ="nan">
+                <button class="btn">Press to start</button></a>
     </div>
         
      
