--- a/HorseRide.html
+++ b/HorseRide.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="HorseRideStyle.css">
-    <script src="index.js" type="module"></script>
+    <script src="HorseRideJs.js" type="module"></script>
 </head>
 <body>
     <!-- <img src="dino-stationary.png" alt="" id ="hii"> -->
