BacKAudio Added to  Dino

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <!-- <img src="dino-stationary.png" alt="" id ="hii"> -->
     <audio id="crashSound" src="assets/crash.mpeg"></audio>
     <audio id="jumpSound" src="assets/jump.mpeg"></audio>
-
+    <audio id="BackgroundSound" src="assets/backgroundAudio.mp3"></audio>
     <div class ="center">
       <canvas id = "game"></canvas>
   </div>
